--- a/Codigo/pruebaa/P2OLC1DIC23/ReporteErrores.html
+++ b/Codigo/pruebaa/P2OLC1DIC23/ReporteErrores.html
@@ -79,8 +79,8 @@ table {
 <tbody>
 <tr>
 <td>Semantico</td>
-<td>No se puede realizar la suma entre</td>
-<td>5 {char} y true {bool}</td>
+<td>¡Error Semantico! Tipo de dato   incorrecto</td>
+<td>no se puede realizar la operacion</td>
 <td>0</td>
 <td>0</td>
 </tr>
